--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Porfolio de Vitor Comin, desenvolvedor Full-Stack."
     />
+    <meta
+      name="google-site-verification"
+      content="SSgoRZq_OvBcbwpyjCRrWuvppQJCn0wulP7jvTIZdME"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
