Some descriptions adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Porfolio de Vitor Comin, desenvolvedor Full-Stack."
+      content="Portfolio de Vitor Comin, um desenvolvedor Full-Stack apaixonado pelo que faz. Descubra um pouco sobre mim e veja meus projetos."
     />
     <meta
       name="google-site-verification"
