--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,17 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      id="light-theme-stylesheet"
+      href="%PUBLIC_URL%/light-theme.css"
+    />
+    <link
+      rel="stylesheet"
+      id="dark-theme-stylesheet"
+      href="%PUBLIC_URL%/dark-theme.css"
+      disabled
+    />
     <title>Vitor Comin</title>
   </head>
   <body>
