Chaning default theme and font family

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
       href="%PUBLIC_URL%/dark-theme.css"
       disabled
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Cookie&family=Dancing+Script:wght@400..700&family=Miniver&family=Pacifico&family=Petit+Formal+Script&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Vitor Comin</title>
   </head>
   <body>
